--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Find JAR File
         id: find_jar
         run: |
-          FILE=$(find target -maxdepth 1 -name '*.jar' | head -n1)
+          FILE=$(find target -maxdepth 1 -type f -name 'TENSA-*.jar' | head -n1)
           echo "JAR_PATH=$FILE" >> $GITHUB_ENV
 
       - name: Upload Artifacts
