--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 
     <groupId>com</groupId>
     <artifactId>TENSA</artifactId>
-    <version>1.0.0</version>
+    <version>2.0.0</version>
     <packaging>jar</packaging>
 
     <name>TENSA</name>
@@ -16,6 +16,8 @@
         <!-- General properties -->
         <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <!-- Skip tests by default on build -->
+        <skipTests>true</skipTests>
 
         <!-- Plugin versions -->
         <maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
@@ -81,6 +83,11 @@
         <dependency>
             <groupId>io.netty</groupId>
             <artifactId>netty-codec</artifactId>
+            <version>${netty.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-handler</artifactId>
             <version>${netty.version}</version>
         </dependency>
 
@@ -175,6 +182,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>3.2.5</version>
                 <configuration>
+                    <skipTests>${skipTests}</skipTests>
                     <useModulePath>false</useModulePath>
                     <includes>
                         <include>**/*Test.java</include>
@@ -277,6 +285,13 @@
                     </resource>
                 </resources>
             </build>
+        </profile>
+        <!-- Enable tests explicitly with -P tests -->
+        <profile>
+            <id>tests</id>
+            <properties>
+                <skipTests>false</skipTests>
+            </properties>
         </profile>
     </profiles>
 
